--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "constants": "^0.0.2",
     "expo": "^35.0.0",
+    "expo-asset": "~7.0.0",
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
-    "react-native-web": "^0.11.7"
+    "react-native-paper": "^3.1.1",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "3.11.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
