--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "constants": "^0.0.2",
     "expo": "^35.0.0",
     "expo-asset": "~7.0.0",
+    "expo-barcode-scanner": "~7.0.0",
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
+    "moment": "^2.24.0",
+    "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.1.1",
+    "react-native-prompt-android": "^1.1.0",
+    "react-native-swipe-list-view": "^2.0.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "3.11.1"
   },
