--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "~0.25.0",
     "react-native-paper": "^3.1.1",
+    "react-native-picker-select": "^6.3.3",
     "react-native-prompt-android": "^1.1.0",
     "react-native-swipe-list-view": "^2.0.3",
     "react-native-web": "^0.11.7",
-    "react-navigation": "3.11.1"
+    "react-navigation": "3.11.1",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
