--- a/app.json
+++ b/app.json
@@ -4,11 +4,7 @@
     "slug": "pitch-app",
     "privacy": "public",
     "sdkVersion": "35.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,12 +16,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "android": {
+      "package": "com.thepitchapp"
+    },
+    "description": "The Student Finance Club of Obafemi Awolowo University (SFC OAU) is a voluntary society that focuses on creating a platform where undergraduates can learn about finance and its career opportunities."
   }
 }
