--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "constants": "^0.0.2",
     "expo": "^35.0.0",
     "expo-asset": "~7.0.0",
     "expo-barcode-scanner": "~7.0.0",
     "expo-location": "~7.0.0",
     "expo-permissions": "~7.0.0",
+    "firebase": "6.0.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "16.8.3",
@@ -24,6 +27,7 @@
     "react-native-paper": "^3.1.1",
     "react-native-picker-select": "^6.3.3",
     "react-native-prompt-android": "^1.1.0",
+    "react-native-qrcode": "^0.2.7",
     "react-native-swipe-list-view": "^2.0.3",
     "react-native-web": "^0.11.7",
     "react-navigation": "3.11.1",
